# letsgo

./: .env.dist  README.md  docker-compose.yaml  go.mod  go.sum  pyproject.toml  shell.nix
.github/workflows/: pr.yml
cmd/: main.go
config/: config.go
internal/app/: router.go
internal/handler/: ping.go  sensor.go
internal/models/: sensor.go  setup.go
src/: app.py
tests/: highest_C02_test.go  ping_test.go
