[tool.poetry]
name = "ragspital"
version = "0.1.0"
description = "A RAG Hospital System"
authors = ["Cristian Angulo <cristianangulonova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
langchain = "^0.1.14"
streamlit = "^1.33.0"
langchain-openai = "^0.1.1"
langchain-community = "^0.0.31"
langchainhub = "^0.1.15"
openai = "^1.16.2"
chromadb = "^0.4.24"
numpy = "^1.26.4"
elasticsearch = "^8.13.0"
langchain-elasticsearch = "^0.1.2"
ollama = "^0.1.8"
langchain-core = "^0.1.42"
gradio = "^4.26.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.23.0"
jupyter = "^1.0.0"
jupyterlab = "^4.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
